--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,5 @@
-*,
-*::before,
-*::after {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;800&display=swap');
+
+body {
+  font-family: 'Manrope', sans-serif;
 }
