--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,11 @@
 body {
   font-family: 'Manrope', sans-serif;
 }
+
+.heading-gradient {
+  font-weight: 900;
+  background: linear-gradient(89.97deg, #ae67fa 1.84%, #f49867 102.67%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
