--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;800&display=swap');
 
+*,
+*::before,
+*::after {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 body {
   font-family: 'Manrope', sans-serif;
   overflow-x: hidden;
-}
-
-.heading-gradient {
-  font-weight: 900;
-  background: linear-gradient(89.97deg, #ae67fa 1.84%, #f49867 102.67%);
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
 }
